tests/NormalTests/paczka2/big_fuzzy/47423022.err
Error in line 3: zd52T A805 30,13
Error in line 2: zd52T S755 78,2
Error in line 11: zd52T A805 75,4
Error in line 17: f1uWP7c1 A823 45,2
Error in line 31: f1uWP7c1 S629 14,7
Error in line 37: A823 A823 4,5
Error in line 38: zd52T S629 72,2
Error in line 44: f1uWP7c1 S629 11,4
Error in line 48: 3Zhc S629 27,4
Error in line 52: 3Zhc A805 18,9
Error in line 40: zd52T A805 11,5
Error in line 64: zd52T S755 63,6
Error in line 45: f1uWP7c1 S755 93,4
Error in line 73: zd52T S755 72,0
Error in line 65: 1w8dNS5q A805 82,6
Error in line 80: 1w8dNS5q S629 82,6
Error in line 75: zd52T A823 77,0
Error in line 82: zd52T S629 88,2
Error in line 69: A823 S755 84,6
Error in line 84: zd52T A823 89,1
Error in line 94: VBfcVLzL A805 46,2
Error in line 101: A823 S629 38,6
Error in line 110: 3Zhc S629 65,1
Error in line 109: f1uWP7c1 S755 1,7
Error in line 123: 3Zhc A805 73,69
Error in line 124: VBfcVLzL A823 390,6
Error in line 132: 3Zhc A805 287,5
Error in line 155: f1uWP7c1 A805 59,0
Error in line 165: zd52T A805 73,2
Error in line 166: zd52T A823 53,3
Error in line 167: zd52T A805 42,6
Error in line 168: zd52T A823 24,0
Error in line 143: 1w8dNS5q A805 116,0
Error in line 174: 3Zhc A823 86,6
Error in line 170: zd52T S755 50,4
Error in line 173: 1w8dNS5q S629 59,8
Error in line 197: A823 A805 90,4
Error in line 194: 1w8dNS5q A823 47,0
Error in line 203: f1uWP7c1 S755 76,9
Error in line 207: wbIdtoQ1tv S755 66,3
Error in line 213: 1w8dNS5q A805 224,52
Error in line 208: A823 A823 148,7
Error in line 224: VBfcVLzL A823 14,1
Error in line 199: 1w8dNS5q A805 62,1
Error in line 247: f1uWP7c1 S629 73,5
